Adding support for additional test frameworks: Mockito, EasyMock, AssertJ, JUnit 5.5.x